--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+    <link rel="icon" href="/images/icon.png">
 
-    <title>Pricing example for Bootstrap</title>
+    <title>About</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/pricing/">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="stylesheets/style.css" rel="stylesheet">
-
+    <link href="stylesheets/animate.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="pricing.css" rel="stylesheet">
 </head>
@@ -35,19 +35,19 @@
     </div>
 
     <div class="container text-center">
-        <h2>About me</h2>
+        <h2 class="animated animated fadeIn">About me</h2>
     </div>
 
     <div class="container d-flex justify-content-center" style="margin-bottom: 56px;">
-        <img src="images/about.png" class="hero">
+        <img src="images/about.png" class="hero animated fadeIn delay-025s">
     </div>
 
     <div class="container">
         <div class="row project-row ">
             <div class="col-md-6">
-                <p class="greeting right-align">It’s been a pleasure meeting you</p>
+                <p class="greeting right-align animated fadeIn delay-05s">It’s been a pleasure meeting you</p>
             </div>
-            <div class="col-md-6 d-flex align-content-center flex-wrap col-title ">
+            <div class="col-md-6 d-flex align-content-center flex-wrap col-title animated fadeIn delay-075s">
                 <p>Hi, I’m
                     <span class="green">Truong Quoc Dat</span>.
                 </p>
