--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+    <link rel="icon" href="/images/icon.png">
 
-    <title>Pricing example for Bootstrap</title>
+    <title>Home</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/pricing/">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
@@ -15,9 +15,8 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="stylesheets/style.css" rel="stylesheet">
+    <link href="stylesheets/animate.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="pricing.css" rel="stylesheet">
 </head>
 
 <body>
@@ -33,16 +32,15 @@
             <a class="p-2 navbar-p navbar-inactive" href="/contact">Contact</a>
         </nav>
     </div>
-
     <div class="container d-flex align-content-center flex-wrap" style="height: 80%;">
         <div class="row">
             <div class="col-md-5">
-                <img src="images/hero.png" class="my-hero">
+                <img src="images/hero.png" class="my-hero animated slow fadeIn">
             </div>
             <div class="col-md-7 d-flex align-content-center flex-wrap">
-                <h1 class="last-name">TRUONG</h1>
-                <h1 class="first-name">QUOC DAT</h1>
-                <a href="/projects" class="my-link arrow">my projects</a>
+                <h1 class="last-name animated fadeInUp">TRUONG</h1>
+                <h1 class="first-name last-name animated fadeInUp">QUOC DAT</h1>
+                <a href="/projects" class="my-link arrow animated fadeInUp">my projects</a>
             </div>
         </div>
     </div>
