--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+    <link rel="icon" href="/images/icon.png">
 
-    <title>Pricing example for Bootstrap</title>
+    <title>Projects</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/pricing/">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="stylesheets/style.css" rel="stylesheet">
-
+    <link href="stylesheets/animate.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="pricing.css" rel="stylesheet">
 </head>
@@ -35,22 +35,22 @@
     </div>
 
     <div class="container text-center">
-        <h2>Projects</h2>
+        <h2 class="animated animated fadeIn">Projects</h2>
     </div>
 
     <div class="container">
         <div class="row project-session">
             <div class="col-md-6">
                 <a href="#">
-                    <div class="square project-1">
+                    <div class="square project-1 animated fadeInUpShort delay-025s">
                     </div>
                 </a>
             </div>
             <div class="col-md-6 d-flex align-content-center flex-wrap col-title">
                 <a href="#">
-                    <p class="project-title">How we won the Facebook Developer Circles Innovation Challenge</p>
+                    <p class="project-title animated fadeInUpTitle delay-05s">How we won the Facebook Developer Circles Innovation Challenge</p>
                 </a>
-                <a href="/projects" class="my-link arrow">read more</a>
+                <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">read more</a>
 
             </div>
         </div>
@@ -58,15 +58,15 @@
         <div class="row project-session">
             <div class="col-md-6 project-session">
                 <a href="#">
-                    <div class="square project-2">
+                    <div class="square project-2 animated fadeInUpShort delay-025s">
                     </div>
                 </a>
             </div>
             <div class="col-md-6 d-flex align-content-center flex-wrap col-title ">
                 <a href="#">
-                    <p class="project-title">My very first step from Motion Design to Product Design </p>
+                    <p class="project-title animated fadeInUpTitle delay-05s">My very first step from Motion Design to Product Design </p>
                 </a>
-                <a href="/projects" class="my-link arrow">read more</a>
+                <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">read more</a>
 
             </div>
         </div>
