--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,12 +35,12 @@
     <div class="container d-flex align-content-center flex-wrap" style="height: 80%;">
         <div class="row">
             <div class="col-md-5">
-                <img src="images/hero.png" class="my-hero animated slow fadeIn">
+                <img src="images/hero.png" class="my-hero animated fadeIn">
             </div>
             <div class="col-md-7 d-flex align-content-center flex-wrap">
-                <h1 class="last-name animated fadeInUp">TRUONG</h1>
-                <h1 class="first-name last-name animated fadeInUp">QUOC DAT</h1>
-                <a href="/projects" class="my-link arrow animated fadeInUp">my projects</a>
+                <h1 class="last-name animated fadeInUp ">TRUONG</h1>
+                <h1 class="first-name last-name animated fadeInUp delay-025s">QUOC DAT</h1>
+                <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">my projects</a>
             </div>
         </div>
     </div>
