--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -22,17 +22,30 @@
 
 <body>
 
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-        <a href="#" class="navbar-brand d-flex align-items-center my-0 mr-md-auto font-weight-normal">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow header">
+        <a href="#" class="/-brand nav-d-flex align-items-center my-0 mr-md-auto font-weight-normal">
             <img src="/images/logo.png" class="my-logo">
         </a>
-        <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 navbar-p navbar-inactive" href="/">Home</a>
-            <a class="p-2 navbar-p navbar-active" href="/projects">Projects</a>
-            <a class="p-2 navbar-p navbar-inactive" href="/about">About</a>
-            <a class="p-2 navbar-p navbar-inactive" href="/contact">Contact</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <nav class="collapse navbar-collapse my-2 my-md-0 mr-md-3" id="navbarNav" style="width: fit-content;">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="navbar-p navbar-inactive" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <p class="navbar-p navbar-active">Projects</p>
+                </li>
+                <li class="nav-item">
+                    <a class="navbar-p navbar-inactive" href="/about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="navbar-p navbar-inactive" href="/contact">Contact</a>
+                </li>
+            </ul>
         </nav>
-    </div>
+    </nav>
 
     <div class="container text-center">
         <h2 class="animated animated fadeIn">Projects</h2>
