--- a/views/about.ejs
+++ b/views/about.ejs
@@ -34,32 +34,33 @@
         </nav>
     </div>
 
-    <div class="container text-center">
-        <h2 class="animated animated fadeIn">About me</h2>
-    </div>
+    <div class="my-section">
+        <div class="container text-center">
+            <h2 class="animated animated fadeIn title">About me</h2>
+        </div>
 
-    <div class="container d-flex justify-content-center" style="margin-bottom: 56px;">
-        <img src="images/about.png" class="hero animated fadeIn delay-025s">
-    </div>
+        <div class="container d-flex justify-content-center hero-section">
+            <img src="images/about.png" class="my-hero animated fadeIn delay-025s">
+        </div>
 
-    <div class="container">
-        <div class="row project-row ">
-            <div class="col-md-6">
-                <p class="greeting right-align animated fadeIn delay-05s">It’s been a pleasure meeting you</p>
-            </div>
-            <div class="col-md-6 d-flex align-content-center flex-wrap col-title animated fadeIn delay-075s">
-                <p>Hi, I’m
-                    <span class="green">Truong Quoc Dat</span>.
-                </p>
-                <p> I’m studying software development at Facaulty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a <span class="green">product designer</span> or a <span class="green">web developer</span>.
-                    You can download my CV <a href="CV.pdf" class="green-link" download>here</a>.
-                    <br/><br/>Moreover, I have a special love for <span class="green">motion design</span>. I’m also available for short freelance motion projects. For example, some onboarding screens for mobile apps.
-                    <br/><br/> Wish you a nice day!
-                </p>
+        <div class="container">
+            <div class="row project-row ">
+                <div class="col-md-6">
+                    <p class="greeting right-align animated fadeIn delay-05s">It’s been a pleasure meeting you</p>
+                </div>
+                <div class="col-md-6 d-flex align-content-center flex-wrap col-title animated fadeIn delay-075s">
+                    <p>Hi, I’m
+                        <span class="green">Truong Quoc Dat</span>.
+                    </p>
+                    <p> I’m studying software development at Facaulty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a <span class="green">product designer</span> or a <span class="green">web developer</span>.
+                        You can download my CV <a href="CV.pdf" class="green-link" download>here</a>.
+                        <br/><br/>Moreover, I have a special love for <span class="green">motion design</span>. I’m also available for short freelance motion projects. For example, some onboarding screens for mobile apps.
+                        <br/><br/> Wish you a nice day!
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-
     <%include footer.ejs%>
 
         <!-- Bootstrap core JavaScript
