--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,17 +45,18 @@
         </nav>
     </nav>
 
-    <div class="row d-flex align-content-center flex-wrap home-session">
-        <div class="col-md-5 d-flex align-items-end flex-column">
-            <img src="images/hero.png" class="my-hero animated fadeIn">
-        </div>
-        <div class="col-md-7 d-flex align-content-center flex-wrap name-session">
-            <h1 class="last-name animated fadeInUp d-flex">TRUONG</h1>
-            <h1 class="first-name last-name animated fadeInUp delay-025s">QUOC DAT</h1>
-            <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">my projects</a>
+    <div class="my-section">
+        <div class="row d-flex align-content-center flex-wrap home-section">
+            <div class="col-md-5 d-flex align-items-center flex-column hero-section ">
+                <img src="images/hero.png" class="my-hero animated fadeIn ">
+            </div>
+            <div class="col-md-7 d-flex align-content-center flex-wrap name-section">
+                <h1 class="last-name animated fadeInUp d-flex">TRƯƠNG</h1>
+                <h1 class="first-name last-name animated fadeInUp delay-025s">QUỐC ĐẠT</h1>
+                <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">my projects</a>
+            </div>
         </div>
     </div>
-
     <%include footer.ejs%>
 
 
