--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -47,47 +47,44 @@
         </nav>
     </nav>
 
-    <div class="container text-center">
-        <h2 class="animated animated fadeIn">Projects</h2>
-    </div>
+    <div class="my-section">
 
-    <div class="container">
-        <div class="row project-session">
-            <div class="col-md-6">
-                <a href="#">
-                    <div class="square project-1 animated fadeInUpShort delay-025s">
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-6 d-flex align-content-center flex-wrap col-title">
-                <a href="#">
-                    <p class="project-title animated fadeInUpTitle delay-05s">How we won the Facebook Developer Circles Innovation Challenge</p>
-                </a>
-                <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">read more</a>
-
-            </div>
+        <div class="container text-center">
+            <h2 class="animated animated fadeIn title">Projects</h2>
         </div>
 
-        <div class="row project-session">
-            <div class="col-md-6 project-session">
-                <a href="#">
-                    <div class="square project-2 animated fadeInUpShort delay-025s">
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-6 d-flex align-content-center flex-wrap col-title ">
-                <a href="#">
-                    <p class="project-title animated fadeInUpTitle delay-05s">My very first step from Motion Design to Product Design </p>
-                </a>
-                <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">read more</a>
+        <div class="project-container">
+            <div class="row project-section">
+                <div class="col-md-6 project-thumbnail-section">
+                    <a href="#">
+                        <div class="square project-1 animated fadeInUpShort delay-025s">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 d-flex align-content-center flex-wrap title-section">
+                    <a href="#" class="project-title animated fadeInUpTitle delay-05s">How we won the Facebook Developer Circles Innovation Challenge</a>
+                    <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">read more</a>
 
+                </div>
             </div>
+
+            <div class="row project-section">
+                <div class="col-md-6 project-thumbnail-section">
+                    <a href="#">
+                        <div class="square project-1 animated fadeInUpShort delay-025s">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 d-flex align-content-center flex-wrap title-section">
+                    <a href="#" class="project-title animated fadeInUpTitle delay-05s">How we won the Facebook Developer Circles Innovation Challenge</a>
+                    <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">read more</a>
+
+                </div>
+            </div>
+
         </div>
-
     </div>
-
     <%include footer.ejs%>
-        </div>
 
 
         <!-- Bootstrap core JavaScript
