--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -33,15 +33,17 @@
         </nav>
     </div>
 
-    <div class="container text-center animated fadeIn">
-        <h2>Contact</h2>
-    </div>
+    <div class="my-section">
+        <div class="container text-center">
+            <h2 class="animated animated fadeIn title">Contact</h2>
+        </div>
 
-    <div class="contact-session animated fadeIn delay-025s">
-        <p class="contact">You can say hi to me through <a href="mailto:tqdat99@gmail.com?Subject=Hi" target="_top" class="green-link">tqdat99@gmail.com</a> or <a href="https://www.facebook.com/tqdat99" class="green-link" target="_blank">Facebook</a>. </br>Otherwise, check
-            my <a href="https://www.linkedin.com/in/tqdat99/" class="green-link" target="_blank">Linkedin</a>,
-            <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a>, <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
-        </p>
+        <div class="contact-session animated fadeIn delay-025s">
+            <p class="contact">You can say hi to me through <a href="mailto:tqdat99@gmail.com?Subject=Hi" target="_top" class="green-link">tqdat99@gmail.com</a> or <a href="https://www.facebook.com/tqdat99" class="green-link" target="_blank">Facebook</a>. </br>Otherwise,
+                check my <a href="https://www.linkedin.com/in/tqdat99/" class="green-link" target="_blank">Linkedin</a>,
+                <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a>, <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
+            </p>
+        </div>
     </div>
 
     <%include footer.ejs%>
