--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,67 +20,20 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow header">
-        <a href="#" class="/-brand d-flex align-items-center my-0 mr-md-auto font-weight-normal">
-            <img src="/images/logo.png" class="my-logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <nav class="collapse navbar-collapse my-2 my-md-0 mr-md-3" id="navbarNav" style="width: fit-content;">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <p class="navbar-p navbar-active">Home</p>
-                </li>
-                <li class="nav-item">
-                    <a class="navbar-p navbar-inactive" href="/projects">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="p-2 navbar-p navbar-inactive" href="/about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="p-2 navbar-p navbar-inactive" href="/contact">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </nav>
-
-    <div class="my-section">
-        <div class="row d-flex align-content-center flex-wrap home-section">
-            <div class="col-md-5 d-flex align-items-center flex-column hero-section ">
-                <img src="images/hero.png" class="my-hero animated fadeIn ">
-            </div>
-            <div class="col-md-7 d-flex align-content-center flex-wrap name-section">
-                <h1 class="last-name animated fadeInUp d-flex">TRƯƠNG</h1>
-                <h1 class="first-name last-name animated fadeInUp delay-025s">QUỐC ĐẠT</h1>
-                <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">my projects</a>
+    <%include nav.ejs%>
+        <div class="my-section">
+            <div class="row d-flex align-content-center flex-wrap home-section">
+                <div class="col-md-5 d-flex align-items-center flex-column hero-section ">
+                    <img src="images/hero.png" class="my-hero animated fadeIn ">
+                </div>
+                <div class="col-md-7 d-flex align-content-center flex-wrap name-section">
+                    <h1 class="last-name animated fadeInUp d-flex">TRƯƠNG</h1>
+                    <h1 class="first-name last-name animated fadeInUp delay-025s">QUỐC ĐẠT</h1>
+                    <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">my projects</a>
+                </div>
             </div>
         </div>
-    </div>
-    <%include footer.ejs%>
-
-
-        <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script>
-            window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
-        </script>
-        <script src="../../assets/js/vendor/popper.min.js"></script>
-        <script src="../../dist/js/bootstrap.min.js"></script>
-        <script src="../../assets/js/vendor/holder.min.js"></script>
-        <script>
-            Holder.addTheme('thumb', {
-                bg: '#55595c',
-                fg: '#eceeef',
-                text: 'Thumbnail'
-            });
-        </script>
-
-
+        <%include footer.ejs%>
 </body>
 
 </html>
