--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,5 +1,5 @@
 <div class="my-nav d-flex flex-md-row align-items-center bg-white border-bottom box-shadow justify-content-between">
-    <a href="#" class="/-brand d-flex align-items-center my-0 mr-md-auto font-weight-normal">
+    <a href="/" class="/-brand d-flex align-items-center my-0 mr-md-auto font-weight-normal">
         <img src="/images/logo.png" class="my-logo">
     </a>
     <img src="/images/menu.svg" class="hamburger" onclick="openNav()">
@@ -11,7 +11,7 @@
     </nav>
 </div>
 <div id="mySidebar" class="sidebar hamburger">
-    <p id="sidenav-home" class="sidebar-option">Home</p>
+    <p id="sidenav-home" class="sidebar-option" href="/">Home</p>
     <a id="sidenav-projects" class="sidebar-option" href="/projects">Projects</a>
     <a id="sidenav-about" class="sidebar-option" href="/about">About</a>
     <a id="sidenav-contact" class="sidebar-option" href="/contact">Contact</a>
